<resources>
    <string name="app_name">BackendAPIs</string>
    <string name="send">send</string>
    <string name="add_new_header">Add New Header</string>
    <string name="add">ADD</string>
    <string name="cancel">Cancel</string>
    <string name="url">url</string>
    <string name="save_response">Save Response</string>
    <string name="please_wait">Please wait…</string>
    <string name="result">Result :</string>
    <string name="row">Row</string>
    <string name="body">Body :</string>
    <string name="response_message">Response Message :</string>
    <string name="headers">Headers :</string>
    <string name="params">Params :</string>
    <string name="form_urlencoded">Form UrlEncoded</string>
    <string name="add_new_param">Add New Param</string>
    <string name="add_new_data">Add New Data</string>
    <string name="edit">Edit</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="response">RESPONSE</string>
    <string name="empty">Empty</string>

</resources>