<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/response_code_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Response Code :"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/response_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/response_code_txt"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/response_msg_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/response_code_txt"
            android:layout_marginBottom="10dp"
            android:text="@string/response_message"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/response_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/response_code_txt"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/response_msg_txt"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/response_header_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/response_msg_txt"
            android:text="@string/headers"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/show_hide_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/response_msg_txt"
            android:layout_alignParentEnd="true"
            android:text="@string/show" />

        <TextView
            android:id="@+id/response_headers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/response_header_txt"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_border_line"
            android:padding="15dp"
            android:scrollbars="vertical"
            android:textSize="18sp"
            android:visibility="gone"

            />


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/response_headers"
            android:layout_marginTop="10dp"
            android:text="@string/result"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_border_line"
            android:padding="15dp"
            android:scrollbars="vertical" />


    </RelativeLayout>
</ScrollView>