<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="20dp"
    tools:context=".ui.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:id="@+id/spinner_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/custom_border_line"
            android:padding="10dp">

            <Spinner
                android:id="@+id/requests_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/requests_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            </Spinner>
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/url"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_layout"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/url">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/url_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/send_request"
            android:layout_below="@+id/url">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/parameter_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/params"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <ImageButton
                    android:id="@+id/add_parameter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_add_circle_24" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/parameter_recycle_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/parameter_text"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:nestedScrollingEnabled="false" />

                <TextView
                    android:id="@+id/header_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/parameter_recycle_view"
                    android:text="@string/headers"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/add_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/parameter_recycle_view"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_add_circle_24" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/headers_recycle_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/header_text"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:nestedScrollingEnabled="false" />

                <RelativeLayout
                    android:id="@+id/body_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/headers_recycle_view"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/body_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/body"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/body_options"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/body_text"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <RadioButton
                            android:id="@+id/row"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/row" />

                        <RadioButton
                            android:id="@+id/key_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/form_urlencoded" />
                    </RadioGroup>

                    <ImageButton
                        android:id="@+id/add_body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_baseline_add_circle_24"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/body_recycle_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/body_options"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/body_options"
                        android:background="@drawable/custom_border_line"
                        android:minLines="5"
                        android:padding="15dp" />

                </RelativeLayout>

            </RelativeLayout>
        </ScrollView>

        <Button
            android:id="@+id/send_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/send" />


    </RelativeLayout>
</RelativeLayout>